# OpenixSuit

./: .gitmodules  CHANGELOG.md  README.md  i18next-parser.config.mjs  i18next.config.ts  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: BuildRelease.yml  TestBuild.yml  lint-check.yml  release.yml
docs/: ARCHITECTURE.md
scripts/: sync-version.js
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: file.rs  flash.rs  lib.rs  main.rs  proxy.rs  types.rs
src-tauri/src/disasm/: commands.rs  types.rs
src-tauri/src/efex/: commands.rs  error.rs  function.rs  mod.rs  types.rs
src-tauri/src/hotplug/: commands.rs  mod.rs  types.rs  watcher.rs
src-tauri/src/workers/: commands.rs  types.rs
src/Assets/: ChipIdToChipName.ts  DynmicI18nKeys.ts  I18nKeys.ts  chipIdToChipName.ts
src/Components/EFELGui/: EFELGui.css  EFELGui.tsx  HexView.tsx  Types.ts  Utils.ts  index.ts
src/Components/EFEXGui/: EFEXGui.css  EFEXGui.tsx  index.ts
src/Components/FirmwareDownloader/: ErrorHandler.ts  FirmwareDownloader.css  FirmwareDownloader.tsx  FirmwareDownloaderPage.tsx  FlashFirmware.ts  Types.ts  Utils.ts  flash.ts  index.ts
src/Components/FirmwareLoader/: FirmwareLoader.css  FirmwareLoader.tsx  FirmwareLoaderPage.tsx  index.ts
src/CoreUI/: index.ts
src/CoreUI/Layout/: Layout.css  Layout.tsx
src/CoreUI/PageContainer/: PageContainer.css  PageContainer.tsx
src/CoreUI/Popup/: Popup.css  Popup.tsx  index.ts
src/CoreUI/Sidebar/: Sidebar.css  Sidebar.tsx
src/Devices/: DownloadBoot.ts  DownloadEraseFlag.ts  DownloadMBR.ts  DownloadPartition.ts  DownloadUboot.ts  FEL2FES.ts  HotPlug.ts  InitDRAM.ts  Interface.ts  SetDeviceNextMode.ts  SetUBIFSInterface.ts  index.ts
src/FlashConfig/: Boot0Header.ts  Constants.ts  MBRParser.ts  SysConfigParser.ts  UBootHeader.ts  Utils.ts  constants.ts  index.ts  types.ts  utils.ts
src/Settings/: Settings.css  Settings.tsx  index.ts  settingsStore.ts
src/Utils/: Binary.ts  Checksum.ts  Chips.ts  Format.ts  Parse.ts  index.ts
src/i18n/: index.ts
src/i18n/locales/: en-US.json  ja-JP.json  ko-KR.json  zh-CN.json  zh-TW.json
src/lib/: index.ts
src/lib/libefex/: context.ts  error.ts  fel.ts  fes.ts  types.ts
src/lib/openix-img/: OpenixCFG.ts  OpenixPacker.ts  OpenixPartition.ts  types.ts
test/files/: sys_config.fex
(+37 files in other folders)
