[package]
name = "openixsuit-app"
version = "0.1.6"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "openixsuit_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
lazy_static = "1.4"
libefex = { path = "libs/libefex/rust/libefex" }
capstone = "0.13"
rusb = "0.9"
